# capsula

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_PROGRESS_REPORT.md  README-CN.md  README.md  analyze_encrypted_key.sh  capsula-pki-analysis.md  test_loaded_keys.rs  医问AI流程.md  开发进展.md  数据胶囊封装实现TODO.md
.serena/: project.yml
crates/capsula-android/: Cargo.toml  README.md  USAGE.md  build.sh
crates/capsula-android/.cargo/: config.toml
crates/capsula-android/android-libs/: README.md
crates/capsula-android/src/: error.rs  key.rs  lib.rs
crates/capsula-api/: Cargo.toml  README.md  test_capsule.sh
crates/capsula-api/src/: encoding.rs  error.rs  key.rs  lib.rs  main.rs  settings.rs  signing.rs
crates/capsula-api/src/handlers/: capsule.rs
crates/capsula-api/src/models/: capsule.rs
crates/capsula-api/src/routes/: mod.rs
crates/capsula-bank/: API_VERSIONING.md  ARCHITECTURE.md  Cargo.toml  USAGE_SYSTEM_KEY.md  V2_API_SUMMARY.md  mvp与pki以及数据银行对接.md  test_authorization.sh  数据胶囊数据管理.pptx  数据胶囊权属向量码.md  数据银行实现.md
crates/capsula-bank/config/: services-example.toml
crates/capsula-bank/examples/: cap1_llm_demo.rs  fix_capsule_schema.rs  insert_owner_key.rs  insert_system_key.rs  test_recipe_decrypt.rs
crates/capsula-bank/keys/: system_private.pem
crates/capsula-bank/prompts/: cap1_level1_summary.md
crates/capsula-bank/src/: lib.rs  logging.rs  main.rs  settings.rs  数据胶囊权限.md
crates/capsula-bank/src/db/: atomic_permissions.rs  capsule.rs  mod.rs  molecular_permissions.rs  operations.rs  private_key.rs  token.rs  user.rs
crates/capsula-bank/src/error/: mod.rs
crates/capsula-bank/src/handlers/: authorization.rs  capsule.rs  mod.rs
crates/capsula-bank/src/handlers/v1/: authorization.rs  mod.rs
crates/capsula-bank/src/handlers/v2/: capsule.rs  capsule_create.rs  mod.rs  storage.rs
crates/capsula-bank/src/models/: capsule.rs  capsule_request.rs  mod.rs  private_key.rs  recipe.rs  token.rs  user.rs
crates/capsula-bank/src/models/permission/: atomic.rs  mod.rs  molecular.rs
crates/capsula-bank/src/routes/: authorization.rs  capsule.rs  health.rs  mod.rs
crates/capsula-bank/src/routes/v1/: authorization.rs  capsule.rs  mod.rs
crates/capsula-bank/src/routes/v2/: capsule.rs  mod.rs  storage.rs
crates/capsula-bank/src/services/: capsule_sealer.rs  error.rs  metadata_gen.rs  mod.rs  temp_file.rs
crates/capsula-bank/src/static_files/: key.rs
crates/capsula-bank/src/utils/: cap1_util.rs  capsula_util.rs  mod.rs  policy_util.rs
crates/capsula-cli/: Cargo.toml
crates/capsula-cli/src/: error.rs  main.rs
crates/capsula-cli/src/commands/: export.rs  generate.rs  hash.rs  info.rs  mod.rs  sign.rs  verify.rs
crates/capsula-core/: 1 白皮书说明.md  2 数据权限.md  3 数据胶囊结构.md  Cargo.toml  TODO.md  思路.md  数据胶囊封包与解包.md  数据胶囊授权系统设计方案.md  权限机制设计方案.md
crates/capsula-core/src/: api.rs  decapsulator.rs  encapsulator.rs  error.rs  lib.rs  types.rs
crates/capsula-core/src/aad/: mod.rs
crates/capsula-core/src/block/: ciphertext.rs  mod.rs  proof.rs  seal.rs
crates/capsula-core/src/builder/: mod.rs
crates/capsula-core/src/capsule/: cap0.rs  cap1.rs  cap2.rs  header.rs  mod.rs
crates/capsula-core/src/integrity/: digest.rs  mod.rs  signature.rs  watermark.rs
crates/capsula-core/src/keyring/: mod.rs
crates/capsula-core/src/others/: report.rs
crates/capsula-core/src/policy/: mod.rs
crates/capsula-core/src/protocol/: audit.rs  base.rs  block.rs  capsule.rs  keyring.rs  meta.rs  mod.rs  policy.rs  types.rs
crates/capsula-core/src/state/: mod.rs
crates/capsula-core/src/upload/: mod.rs
crates/capsula-crypto/: Cargo.toml  README.md
crates/capsula-crypto/src/: algorithm.rs  ed25519.rs  error.rs  hash.rs  lib.rs  p256.rs  sha256.rs  utils.rs  x25519.rs
crates/capsula-crypto/src/asymmetric/: ed25519.rs  mod.rs  p256.rs  rsa.rs
crates/capsula-crypto/src/cert/: cert_utils.rs  mod.rs
crates/capsula-crypto/src/encoding/: mod.rs  spki.rs
crates/capsula-crypto/src/error/: mod.rs
crates/capsula-crypto/src/hash/: base64.rs  mod.rs  sha.rs
crates/capsula-crypto/src/kdf/: mod.rs
crates/capsula-crypto/src/key/: ecc.rs  mod.rs  types.rs
crates/capsula-crypto/src/signature/: ecc.rs
crates/capsula-crypto/src/symmetric/: aead.rs  aes.rs  chacha.rs  mod.rs
crates/capsula-ffi/: Cargo.toml  README.md  build.rs
crates/capsula-ffi/examples/: auto_sign_demo.c  ffi_demo.c  simple_demo.c
crates/capsula-ffi/src/: key_ops.rs  lib.rs  memory.rs  signing.rs  types.rs  utils.rs
crates/capsula-key/: Cargo.toml  README.md
crates/capsula-key/src/: lib.rs  provider.rs  types.rs
crates/capsula-key/src/error/: mod.rs  store.rs
crates/capsula-key/src/hash/: mod.rs
crates/capsula-key/src/impls/: ed25519.rs  mod.rs
crates/capsula-key/src/key/: curve25519.rs  mod.rs  p256.rs  rsa.rs  util.rs
crates/capsula-key/src/signature/: mod.rs
crates/capsula-key/src/store/: enhanced.rs  file.rs  hsm.rs  memory.rs  mod.rs
crates/capsula-pki/: Cargo.toml  README.md  TODO.md
crates/capsula-pki/src/: error.rs  key.rs  lib.rs  types.rs
crates/capsula-pki/src/ca/: authority.rs  chain.rs  config.rs  manager.rs  mod.rs
crates/capsula-pki/src/cert/: cert_utils.rs  mod.rs  types.rs
crates/capsula-pki/src/chain/: mod.rs
crates/capsula-pki/src/crl/: mod.rs
crates/capsula-pki/src/csr/: mod.rs
crates/capsula-pki/src/keystore/: escrow.rs  generator.rs  hsm.rs  mod.rs  pki_adapter.rs  recovery.rs  rotation.rs
crates/capsula-pki/src/lifecycle/: automation.rs  expiry.rs  expiry_notification.rs  issuance.rs  mod.rs  policy.rs  renewal.rs  revocation.rs
crates/capsula-pki/src/ra/: approval.rs  approval_workflow.rs  cert.rs  csr.rs  identity.rs  identity_auth.rs  mod.rs  processor.rs  request_handler.rs  validation.rs
crates/capsula-pki/src/status/: cache.rs  crl.rs  mod.rs  ocsp.rs  validator.rs
crates/capsula-pki/src/store/: mod.rs
crates/capsula-wasm/: .gitignore  Cargo.toml  README.md  USAGE.md  build.sh  compile-and-test.md  dist-frontend.md  example.html  package-frontend.sh
crates/capsula-wasm/src/: hash.rs  key.rs  lib.rs  signature.rs
(+62 files in other folders)
