[package]
name = "capsula"
version = "0.1.0"
edition = "2021"
authors = ["Capsula Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ancient/capsula"
description = "数据胶囊 - 安全的数据封装和管理系统"


[[example]]
name = "pki_demo"
path = "examples/pki_demo.rs"

[[example]]
name = "full_demo"
path = "examples/full_demo.rs"

[[example]]
name = "storage_demo"
path = "examples/storage_demo.rs"

[dependencies]
capsula-pki = { path = "crates/capsula-pki" }
capsula-core = { path = "crates/capsula-core" }
capsula-api = { path = "crates/capsula-api" }
capsula-key = { path = "crates/capsula-key" }

# 通用依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }

[workspace]
resolver = "2"
members = [
    "crates/capsula-pki",
    "crates/capsula-api",
    "crates/capsula-cli",
    "crates/capsula-key",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Capsula Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ancient/capsula"

[workspace.dependencies]
# 内部 crates
capsula-pki = { path = "crates/capsula-pki" }
capsula-core = { path = "crates/capsula-core" }
capsula-api = { path = "crates/capsula-api" }
capsula-key = { path = "crates/capsula-key" }

# 外部依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
hex = "0.4"

# 加密相关
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "rand_core"] }
getrandom = "0.3"
sha2 = "0.10"
signature = "2.2"

# 证书相关
rcgen = { version = "0.14", features = ["pem"] }
x509-cert = { version = "0.2", features = ["pem"] }
der = { version = "0.7", features = ["pem"] }
pem = "3.0"

# 密钥存储相关
chacha20poly1305 = { version = "0.10", features = ["std"] }

# 开发依赖
tempfile = "3.12"
