[package]
name = "capsula"
version = "0.1.0"
edition = "2024"
authors = ["Capsula Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ancient/capsula"
description = "数据胶囊 - 安全的数据封装和管理系统"

[dependencies]
capsula-pki = { path = "crates/capsula-pki" }
capsula-core = { path = "crates/capsula-core" }
capsula-key = { path = "crates/capsula-key" }
capsula-crypto = { path = "crates/capsula-crypto" }
capsula-bank = { path = "crates/capsula-bank" }

# 通用依赖
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
der = { workspace = true }
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "2"
members = [
    "crates/capsula-crypto",
    "crates/capsula-pki",
    "crates/capsula-pki-server",
    "crates/capsula-api",
    "crates/capsula-cli",
    "crates/capsula-key",
    "crates/capsula-wasm",
    "crates/capsula-ffi",
    "crates/capsula-core",
    "crates/capsula-bank",
    "crates/capsula-android",
]

default-members = [
    "crates/capsula-cli"  # 让 capsula-cli 成为默认构建对象
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Capsula Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ancient/capsula"

[workspace.dependencies]
# 内部 crates
capsula-crypto = { path = "crates/capsula-crypto" }
capsula-pki = { path = "crates/capsula-pki" }
capsula-core = { path = "crates/capsula-core" }
capsula-key = { path = "crates/capsula-key" }
capsula-ffi = { path = "crates/capsula-ffi" }
capsula-api = { path = "crates/capsula-api" }


# 外部依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# 加密相关
ed25519-dalek = { version = "2.2" }
x25519-dalek = { version = "2.0.1" }
p256 = { version = "0.13", features = [] }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
getrandom = "0.3"
sha1 = "0.10"
sha2 = "0.10"
signature = "2.2"
base64 = "0.22.1"
hkdf = "0.12.4"

# 证书相关
rcgen = { version = "0.14", features = ["pem"] }
x509-cert = { version = "0.2", features = ["pem"] }
der = { version = "0.7", features = ["pem"] }
pem = "3.0"
const-oid = { version = "0.9", features = ["db"] }

# 密钥存储相关
chacha20poly1305 = { version = "0.10", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std", "aes"] }


# 开发依赖
tempfile = "3.12"
