[package]
name = "capsula-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Capsula Android 库 - 提供 Android 平台的密钥管理和数据封装功能"

[lib]
name = "capsula_android"
crate-type = ["cdylib"]  # 编译为动态库供 Android 使用

[dependencies]
# 内部依赖 - 使用统一的 API 层
capsula-api = { path = "../capsula-api" }

# JNI 支持
jni = "0.21"

# 序列化（仅用于 JSON 响应）
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
# Android 特定依赖可以添加在这里

[dev-dependencies]
