[package]
name = "capsula-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "数据胶囊API服务库"

[dependencies]
capsula-core = { workspace = true }
capsula-pki = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
