[package]
name = "capsula-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data Capsule REST API server with encapsulation and decapsulation endpoints"

[dependencies]
# Capsula crates
capsula-core = { path = "../capsula-core" }
capsula-key = { path = "../capsula-key" }
capsula-crypto = { path = "../capsula-crypto" }

# Web framework
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"

# API documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = { version = "0.2" }

# Utilities
toolcraft-axum-kit = { version = "0.2.3" }
toolcraft-config = { version = "0.2.0" }
toolcraft-utils = { version = "0.2.0" }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
