[package]
name = "capsula-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Capsula 统一 API 层 - 高级功能函数库，为所有绑定层提供便捷接口"

[lib]
# 纯 Rust 库，不是 cdylib 或 bin

[dependencies]
# 内部依赖
capsula-core = { workspace = true }
capsula-key = { workspace = true }
capsula-crypto = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 编码
base64 = { workspace = true }

# 工具
hex = { workspace = true }

[dev-dependencies]
