[package]
name = "capsula-bank"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Capsula Banking server with REST API"
default-run = "capsula-bank"

[dependencies]
# Capsula crates
capsula-key = { path = "../capsula-key" }
capsula-core = { path = "../capsula-core" }
capsula-crypto = { path = "../capsula-crypto" }
# capsula-pki = { path = "../capsula-pki" }

# Web framework
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
multer = "3"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"
surrealdb = { version = "2.3.8" }

# API documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = { version = "0.2" }

# Utilities
toolcraft-axum-kit = { version = "0.2.3" }
toolcraft-config = { version = "0.2.0" }
toolcraft-utils = { version = "0.2.2" }
model-gateway-rs = { version = "0.1.6" }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
