[package]
name = "capsula-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "数据胶囊命令行工具"

[[bin]]
name = "capsula"
path = "src/main.rs"

[dependencies]
capsula-key = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
colored = "3.0"
hex = { workspace = true }
rand = "0.8"
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
