[package]
name = "capsula-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true, features = [] }

ed25519-dalek = { workspace = true, features = [
    "pkcs8",
    "pem",
    "rand_core",
    "zeroize",
] }
x25519-dalek = { workspace = true, features = ["static_secrets", "zeroize"] }
p256 = { workspace = true, features = ["ecdsa", "pkcs8", "pem", "ecdh"] }
rsa = { workspace = true }
pkcs8 = { workspace = true }
der = { workspace = true }
const-oid = { workspace = true }
hkdf = { workspace = true }

# PEM encoding
pem = { workspace = true }

# SHA256 hashing
sha2 = { workspace = true }

# Random number generation
getrandom = { workspace = true }
rand = { workspace = true }

# Encoding
hex = { workspace = true }

# Symmetric encryption
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
