[package]
name = "capsula-key"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Capsula base key management library"

[dependencies]
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
rcgen = { workspace = true }
x509-cert = { workspace = true }
pem = { workspace = true }
