[package]
name = "capsula-key"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Capsula base key management library"

[dependencies]
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
rcgen = { workspace = true }
x509-cert = { workspace = true }
pem = { workspace = true }

# New dependencies for key storage
chacha20poly1305 = { version = "0.10", features = ["std"] }
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
